--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -15,12 +15,30 @@ body {
     overflow-y: hidden;
   }
 
+-webkit-scrollbar {
+    width: 1em !important;
+  }
+   
+-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+  }
+   
+-webkit-scrollbar-thumb {
+    background-color: rgb(255, 0, 0) !important;
+    outline: 1px solid slategrey !important;
+  }
+
 .btn-pretty {
   font-size: medium;
   padding-top: 1.4em;
   padding-bottom: 1.4em;
   padding-left: 1.5em !important;
   width: 80%;
+}
+
+.menu_scroll{
+  overflow-y: auto !important;
+  max-height: 60vh !important;
 }
 
 .scroll{
@@ -34,7 +52,7 @@ body {
 
 .mw280{
     padding: 0px;
-    display: block;
+    display: absolute;
     width: 330px;
     height: 100vh;
     background-color: rgb(235, 235, 235) !important;
@@ -42,6 +60,7 @@ body {
     border: solid rgba(0, 0, 0, .15);
     border-width: 1px 0;
     box-shadow: inset 0 0.5em 1.5em rgb(0 0 0 / 10%), inset 0 0.125em 0.5em rgb(0 0 0 / 15%);
+    /* overflow-y: scroll; */
 }
 
 
