--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,14 @@ h3 {
     background-color:black !important;
     border-color: black !important;
 }
+
+.form-altura{
+    height: 100%
+}
+
+.list-h1{
+    font-size: 2.2rem !important;
+    line-height: 3.3rem !important;
+    letter-spacing: -0.05em !important;
+    font-weight: 600 !important;
+}
